added cool new icons + login fix

--- a/app/src/main/res/layout/post_feed_list.xml
+++ b/app/src/main/res/layout/post_feed_list.xml
@@ -6,12 +6,13 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
+    android:background="@color/slate_800"
     android:layout_height="match_parent">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/post_list_recycler"
-        android:layout_width="395dp"
-        android:layout_height="710dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:scrollbars="vertical"
         tools:ignore="MissingConstraints" />
 
