--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="birbyellow">#FBBF24</color>
     <color name="birbyellowvariant">#f59E0B</color>
     <color name="slate_800">#1e293b</color>
+    <color name="slate_700">#334155</color>
     <color name="red_400">#ef4444</color>
     <color name="red_800">#991b1b</color>
     <color name="text_light">#cbd5e1</color>
