--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -2,109 +2,130 @@
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    app:cardCornerRadius="0dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/slate_700"
-        android:paddingLeft="8dp"
-        android:paddingTop="8dp"
-        android:paddingRight="8dp"
-        android:paddingBottom="8dp">
+        android:layout_height="wrap_content">
 
-        <ImageView
-            android:id="@+id/post_profile_pic"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="profilePic"
-            app:srcCompat="@drawable/user" />
-
-        <TextView
-            android:id="@+id/post_author_username"
-            android:layout_width="190dp"
+        <RelativeLayout
+            android:id="@+id/post_layout"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:layout_marginEnd="-264dp"
-            android:layout_toStartOf="@id/post_profile_pic"
-            android:text="Author"
-            android:textAlignment="textStart"
-            android:textSize="20sp" />
+            android:background="@color/slate_700"
+            android:paddingLeft="8dp"
+            android:paddingTop="8dp"
+            android:paddingRight="8dp"
+            android:paddingBottom="8dp">
 
-        <TextView
-            android:id="@+id/post_author_email"
-            android:layout_width="234dp"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:layout_marginEnd="-234dp"
-            android:layout_toStartOf="@id/post_author_username"
-            android:text="email@author" />
+            <ImageView
+                android:id="@+id/post_profile_pic"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="profilePic"
+                app:srcCompat="@drawable/user" />
 
-        <TextView
-            android:id="@+id/post_content_text"
+            <TextView
+                android:id="@+id/post_author_username"
+                android:layout_width="190dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="-264dp"
+                android:layout_toStartOf="@id/post_profile_pic"
+                android:text="Author"
+                android:textAlignment="textStart"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/post_author_email"
+                android:layout_width="234dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35dp"
+                android:layout_marginEnd="-234dp"
+                android:layout_toStartOf="@id/post_author_username"
+                android:text="email@author" />
+
+            <TextView
+                android:id="@+id/post_content_text"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/post_profile_pic"
+                android:layout_marginTop="15dp"
+                android:padding="10dp"
+                android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
+
+            <ImageView
+                android:id="@+id/post_like_button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_below="@id/post_content_text"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:adjustViewBounds="true"
+                android:contentDescription="likeButton"
+                app:srcCompat="@drawable/like" />
+
+            <TextView
+                android:id="@+id/post_like_counter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/post_content_text"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_toEndOf="@id/post_like_button"
+                android:text="420" />
+
+            <ImageView
+                android:id="@+id/post_repost_button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_below="@id/post_content_text"
+                android:layout_marginStart="50dp"
+                android:layout_marginTop="5dp"
+                android:layout_toEndOf="@id/post_like_button"
+                android:adjustViewBounds="true"
+                android:contentDescription="likeButton"
+                app:srcCompat="@drawable/retweet" />
+
+            <TextView
+                android:id="@+id/post_repost_counter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/post_content_text"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="10dp"
+                android:layout_toEndOf="@id/post_repost_button"
+                android:text="420" />
+
+            <TextView
+                android:id="@+id/post_date"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/post_content_text"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="5dp"
+                android:text="2023.4.20." />
+
+            <TextView
+                android:id="@+id/post_id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentEnd="true"
+                android:layout_toEndOf="@id/post_author_username"
+                android:text="post ID"
+                android:visibility="invisible" />
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/post_profile_pic"
-            android:layout_marginTop="15dp"
-            android:padding="10dp"
-            android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum." />
-
-        <ImageView
-            android:id="@+id/post_like_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/post_content_text"
-            android:layout_marginStart="5dp"
-            android:layout_marginTop="5dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="likeButton"
-            app:srcCompat="@drawable/like" />
-
-        <TextView
-            android:id="@+id/post_like_counter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/post_content_text"
-            android:layout_toEndOf="@id/post_like_button"
-            android:layout_marginStart="5dp"
-            android:text="420"
-            android:layout_marginTop="10dp" />
-
-        <ImageView
-            android:id="@+id/post_repost_button"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_below="@id/post_content_text"
-            android:layout_toEndOf="@id/post_like_button"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="5dp"
-            android:adjustViewBounds="true"
-            android:contentDescription="likeButton"
-            app:srcCompat="@drawable/retweet" />
-
-        <TextView
-            android:id="@+id/post_repost_counter"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/post_content_text"
-            android:layout_toEndOf="@id/post_repost_button"
-            android:layout_marginStart="5dp"
-            android:text="420"
-            android:layout_marginTop="10dp" />
-
-        <TextView
-            android:id="@+id/post_date"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/post_content_text"
-            android:layout_alignParentEnd="true"
-            android:layout_marginTop="10dp"
-            android:layout_marginEnd="5dp"
-            android:text="2023.4.20." />
-
+            android:layout_height="10dp"
+            android:layout_below="@id/post_layout"
+            android:background="@color/slate_800" />
 
     </RelativeLayout>
 
