--- a/app/src/main/res/layout/post.xml
+++ b/app/src/main/res/layout/post.xml
@@ -115,10 +115,23 @@
                 android:id="@+id/post_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_above="@id/post_content_text"
                 android:layout_alignParentEnd="true"
-                android:layout_toEndOf="@id/post_author_username"
                 android:text="post ID"
                 android:visibility="invisible" />
+
+            <ImageView
+                android:id="@+id/post_delete_button"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginBottom="25dp"
+                android:layout_above="@id/post_content_text"
+                android:layout_alignEnd="@id/post_content_text"
+                android:adjustViewBounds="true"
+                android:contentDescription="delete post"
+                android:visibility="gone"
+                app:srcCompat="@drawable/x" />
+
         </RelativeLayout>
 
         <RelativeLayout
